| Summary: | ASTERISK-22731: Crash on incoming chan_pjsip call where dialplan hangs up before ACK is received for INVITE | ||||
| Reporter: | Kinsey Moore (kmoore) | Labels: | |||
| Date Opened: | 2013-10-18 14:16:47 | Date Closed: | 2013-10-26 07:56:22 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||
| Versions: | SVN 12.0.0-beta1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | 64bit Debian Sid, Asterisk 12 Beta 1 | Attachments: | ( 0) backtrace.txt ( 1) debug.txt | ||
| Description: | On an incoming call, if the dialplan hangs up before the ACK is received for the INVITE, Asterisk will crash. Debug logs with SIP trace and backtrace are attached. | ||||
| Comments: | |||||